--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,10 +1,31 @@
-.like-widget > .like-txt {
-  top: -7px !important;
-  display: inline-block;
-  position: relative;
+article{
+  margin-bottom: 0;
+}
+.submit-form>input{
+  float: right;
+  padding: 0 3vw 0 3vw;
 }
 
-.like-widget > span {
+@media only screen and (min-width: 1199px){
+  .contacts{
+    align-items: center;
+  }
+}
+
+
+.like-widget{
+  display: flex;
+  justify-content: left;
+}
+@media only screen and (max-width: 767px){
+  .contacts li .like-widget{
+    justify-content:center;
+  } 
+}
+
+
+
+.like-widget span {
   margin: 0 5px;
   font-size: 16px;
   font-family: 'Helvetica', 'Arial', sans-serif;
