--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -46,3 +46,8 @@ article{
   50% { transform: scale(1.3); }
   100% { transform: scale(1); }
 }
+
+div p a{
+  text-decoration: none;
+  color: rgb(140, 140, 140);
+}
